# semaverse-pptx

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .repomixignore  .travis.yml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst
docs/_templates/: sidebarlinks.html
docs/api/: chart-data.rst  util.rst
docs/community/: support.rst
docs/dev/: development_practices.rst  runtests.rst
docs/dev/analysis/: cht-axes.rst  cht-categories.rst  cht-chart-shape.rst  shp-hyperlink.rst  shp-ole-object.rst  shp-shapes.rst  sld-background.rst  tbl-merge.rst  txt-font-color.rst  txt-hyperlink.rst
docs/dev/resources/: about_relationships.rst  index.rst  odds_and_ends.rst  python_packaging.rst  technical_topics.rst  web_resources.rst
docs/user/: autoshapes.rst  install.rst  intro.rst  quickstart.rst  text.rst
features/: act-action.feature  act-hyperlink.feature  cht-axis-props.feature  cht-axistitle-props.feature  cht-category-access.feature  cht-category-props.feature  cht-chart.feature  cht-charttitle-props.feature  cht-data-props.feature  cht-datalabels.feature  cht-gridlines-props.feature  cht-legend-access.feature  cht-legend-props.feature  cht-marker-props.feature  cht-plot-props.feature  cht-point-access.feature  cht-point-props.feature  cht-replace-data.feature  cht-series.feature  cht-ticklabels-props.feature  dml-color.feature  dml-effect.feature  dml-fill.feature  dml-line.feature  environment.py  ph-inherit-props.feature  ph-insert-shape.feature  ph-phfmt-props.feature  ph-placeholder-props.feature  prs-coreprops.feature  prs-default-template.feature  prs-open-save.feature  prs-presentation-props.feature  shp-autoshape.feature  shp-connector.feature  shp-freeform.feature  shp-graphicframe.feature  shp-groupshape.feature  shp-movie-props.feature  shp-picture.feature  (+15 more)
features/steps/: coreprops.py  helpers.py  presentation.py  text.py
lab/cust-elm-classes/: gen_oxml_classes.py  main.py
lab/parse_xsd/: objectify_lab.py
lab/parse_xsd/xsd/: sml.xsd
spec/ISO-IEC-29500-4/xsd/: sml.xsd
spec/gen_spec/: gen_spec.py
spec/gen_spec/src_data/: msoAutoShapeType.py
src/pptx/: __init__.py  action.py  exc.py  media.py  package.py  shared.py  types.py
src/pptx/chart/: axis.py  category.py  chart.py  data.py  datalabel.py  legend.py  marker.py  plot.py  point.py  series.py  xlsx.py  xmlwriter.py
src/pptx/dml/: color.py  effect.py  fill.py  line.py
src/pptx/enum/: shapes.py
src/pptx/opc/: shared.py
src/pptx/oxml/: __init__.py  ns.py  simpletypes.py  xmlchemy.py
src/pptx/parts/: coreprops.py  embeddedpackage.py  image.py  media.py  presentation.py  slide.py
src/pptx/shapes/: graphfrm.py  group.py  placeholder.py  shapetree.py
src/pptx/text/: fonts.py  layout.py
tests/: stubs.py  test_action.py  test_api.py  test_package.py  test_presentation.py  test_shared.py  test_slide.py  test_table.py  test_util.py  test_xml_utils.py  xml_utils.py
tests/__snapshots__/: test_action.ambr  test_presentation.ambr  test_slide.ambr
tests/chart/: conftest.py  factories.py  test_axis.py  test_category.py  test_chart.py  test_datalabel.py  test_legend.py  test_plot_inspector.py  test_series.py  test_xlsx.py  test_xmlwriter.py
tests/chart/__snapshots__/: test_xmlwriter.ambr
tests/dml/: test_chtfmt.py  test_color.py  test_effect.py  test_fill.py  test_line.py
tests/opc/: test_oxml.py  test_package.py  test_packuri.py  test_serialized.py  test_shared.py
tests/opc/__snapshots__/: test_serialized.ambr
tests/oxml/: test_action.py  test_dml.py  test_ns.py  test_presentation.py  test_slide.py  test_table.py  test_theme.py  test_xmlchemy.py
tests/oxml/__snapshots__/: test_dml.ambr  test_table.ambr  test_theme.ambr
tests/oxml/shapes/: test_autoshape.py  test_connector.py  test_graphfrm.py  test_groupshape.py  test_picture.py
tests/parts/: test_chart.py  test_coreprops.py  test_embeddedpackage.py  test_image.py  test_media.py  test_presentation.py  test_slide.py
tests/shapes/: conftest.py  factories.py  test_base.py  test_connector.py  test_freeform.py  test_picture.py  test_placeholder.py  test_shapetree.py
tests/test_files/: coreprops-modern.xml
tests/text/: factories.py  test_fonts.py  test_text.py
tests/unitutil/: cxml.py
tests_modern/: conftest.py  factories.py  stubs.py  test_action.py  test_api.py  test_dummy.py  test_presentation.py  test_slide.py  test_table.py
tests_modern/__snapshots__/: test_dummy.ambr  test_table.ambr
tests_modern/chart/: test_chart.py  test_data.py  test_marker.py  test_plot.py  test_plot_inspector.py  test_point.py  test_xlsx.py  test_xmlwriter.py
tests_modern/dml/: test_chtfmt.py  test_fill.py  test_line.py
tests_modern/enum/: test_base.py  test_shapes.py
tests_modern/opc/: test_oxml.py  test_serialized.py
tests_modern/oxml/: test___init__.py  test_action.py  test_simpletypes.py  test_slide.py  test_table.py  test_theme.py  test_xmlchemy.py
tests_modern/parts/: test_coreprops.py  test_presentation.py  test_slide.py
tests_modern/shapes/: test_autoshape.py  test_connector.py  test_freeform.py  test_graphfrm.py  test_group.py  test_shapetree.py
tests_modern/text/: conftest.py  test_layout.py  test_text.py
(+31 files in other folders)
