[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semaverse-pptx"
authors = [{ name = "Semaverse", email = "semaverse-pptx@semaverse.ai" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Pillow>=3.3.2",
    "XlsxWriter>=0.5.7",
    "lxml>=3.1.0",
    "typing_extensions>=4.9.0",
]

description = "Create, read, and update PowerPoint 2007+ (.pptx) files. Forked from github.com/scanny/python-pptx."
dynamic = ["version"]
keywords = ["powerpoint", "ppt", "pptx", "openxml", "office"]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "behave>=1.2.5",
    "mock>=1.0.1",
    "pyparsing>=3.0.0",
    "pytest>=2.5",
    "pytest-cov",
    "pytest-xdist",
    "syrupy",
    "ruff",
    "tox",
    "tox-uv",
]
dev = ["build", "lxml-stubs>=0.5,<0.6", "pre-commit", "ruff", "twine"]
docs = [
    "Jinja2==2.11.3",
    "MarkupSafe==0.23",
    "Sphinx==1.8.6",
    "alabaster<0.7.14",
]

[project.urls]
Changelog = "https://github.com/semaverse-ai/semaverse-pptx/blob/master/HISTORY.rst"
Documentation = "https://semaverse-pptx.readthedocs.io/en/latest/"
Homepage = "https://github.com/semaverse-ai/semaverse-pptx"
Repository = "https://github.com/semaverse-ai/semaverse-pptx"

[tool.black]
line-length = 100

[tool.pyright]
exclude = ["**/__pycache__", "**/.*"]
venvPath = "."
venv = ".venv"
include = ["src/pptx", "tests/"]
ignore = []
pythonPlatform = "All"
pythonVersion = "3.13"
reportImportCycles = false
# fixme: typing >>
# 1. re-enable one by-one and fix typing issues incrementally.
# 2. remove the many `# pyright:` and fix them properly.
# 3. Replace cast() with proper typing where possible.
# 4. Add `tests/` to the type-checked files and fix typing issues there as well.
# << fixme: Do not delete comment until all re-enabled and fixed
reportMissingParameterType = "none"
reportAttributeAccessIssue = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
stubPath = "./typings"
typeCheckingMode = "strict"
verboseOutput = true

[tool.pytest.ini_options]
filterwarnings = [
    # -- exit on any warning not explicitly ignored here --
    "error",
    # -- pytest-xdist plugin may warn about `looponfailroots` deprecation --
    "ignore::DeprecationWarning:xdist",
    # -- pytest complains when pytest-xdist is not installed --
    "ignore:Unknown config option. looponfailroots:pytest.PytestConfigWarning",
]

looponfailroots = ["src", "tests"]
norecursedirs = [
    "docs",
    "*.egg-info",
    "features",
    ".git",
    "src",
    "spec",
    ".tox",
]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "they_", "but_", "and_"]

[tool.ruff]
line-length = 100

# -- don't check these locations --
exclude = [
    # -- docs/ - documentation Python code is incidental --
    "docs",
    # -- lab/ has some experimental code that is not disciplined --
    "lab",
    # -- ref/ is not source-code --
    "ref",
    # -- spec/ has some ad-hoc discovery code that is not disciplined --
    "spec",
]

[tool.ruff.lint]
select = [
    "COM",     # -- flake8-commas --
    "E",       # -- pycodestyle errors --
    "F",       # -- pyflakes --
    "I",       # -- isort (imports) --
    "PLR0402", # -- Name compared with itself like `foo == foo` --
    "PT",      # -- flake8-pytest-style --
    "TC001",   # -- detect typing-only imports not under `if TYPE_CHECKING` --
    "UP015",   # -- redundant `open()` mode parameter (like "r" is default) --
    "UP018",   # -- Unnecessary {literal_type} call like `str("abc")`. (rewrite as a literal) --
    "UP032",   # -- Use f-string instead of `.format()` call --
    "UP034",   # -- Avoid extraneous parentheses --
    "W",       # -- Warnings, including invalid escape-sequence --
]
ignore = [
    "COM812", # -- over aggressively insists on trailing commas where not desireable --
    "PT001",  # -- wants empty parens on @pytest.fixture where not used (essentially always) --
    "PT011",  # -- pytest.raises({exc}) too broad, use match param or more specific exception --
    "PT012",  # -- pytest.raises() block should contain a single simple statement --
]

[tool.ruff.lint.isort]
known-first-party = ["pptx"]

[tool.hatch.version]
path = "src/pptx/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pptx"]

[tool.hatch.build.targets.sdist]
only-include = ["/src", "/pyproject.toml", "/README.rst", "/LICENSE"]
